manifests/mosquitto/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: mosquitto
  namespace: home-automation
  labels:
    app: mosquitto
spec:
  selector:
    app: mosquitto
  type: ClusterIP
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: mqtt
