manifests/mosquitto/base/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: "docker.io/eclipse-mosquitto:latest"
          imagePullPolicy: Always
          resources: {}
          ports:
            - name: mqtt
              containerPort: 1883
              protocol: TCP
            - name: mqtt-websocket
              containerPort: 9001
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 60
          readinessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 60
          startupProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /mosquitto/data
            - name: config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: passwd
              mountPath: /mosquitto/config/passwd
              subPath: passwd
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-iscsi-mosquitto-data
        - name: config
          configMap:
            name: mosquitto-configmap
        - name: passwd
          secret:
            secretName: mqtt-passwd
            defaultMode: 0700

---
kind: Service
apiVersion: v1
metadata:
  name: mosquitto
  namespace: home-automation
  labels:
    app: mosquitto
spec:
  selector:
    app: mosquitto
  type: ClusterIP
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: mqtt

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  ingressClassName: nginx-private
  rules:
    - host: mqtt.lan.stamx.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosquitto
                port:
                  name: mqtt
