manifests/mosquitto/base/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mosquitto
  labels:
    gateway: private
    app: mosquitto
spec:
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: mqtt
  rules:
    - backendRefs:
        - name: mosquitto
          port: 1883
